--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "name": "Vince",
   "token_file": "./token",
   "database_file": "TODO",
-  "personalities_file": "TODO"
+  "personalities_file": "personalities.json"
 }
