--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "name": "Vince",
   "token_file": "config/token",
   "database": {"protocol": "sqlite:///data.db", "thread-lock": true},
-  "personalities_file": "config/personalities.json",
-  "initial_personality": "normal",
-  "modules_config_file": "config/modules.json"
+  "personalities": {"active_personalities": ["loyal-servant", "normal", "gopnik"]},
+  "modules": {"active_modules": ["Main"], "modules_directory": "Modules"},
+  "default_server_config": {"initial_personality": "normal"}
 }
