added global permissions

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "name": "Vince",
   "token_file": "config/token",
   "database": {"protocol": "sqlite:///resources/data.db", "thread-lock": true},
-  "personalities": {"active_personalities": ["loyal-servant", "normal", "gopnik"], "global": "resources/global_personalities"},
+  "personalities": {"active_personalities": ["loyal-servant", "normal", "gopnik"], "global": {"location": "resources/global_personalities"}},
   "modules": {"active_modules": ["Main", "Logger"], "modules_directory": "Modules"},
   "default_server_config": {"initial_personality": "normal"}
 }
